# TradingAgents

./: .env.claude.bak  .env.qwen.bak  .gitignore  BACKTEST.md  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  generate_report.py  package-lock.json  package.json  pyproject.toml  run_002602_analysis.py  run_688548_analysis.py  run_batch_analysis.py  start.bat  start_web.bat  test_fred_hk.py  test_hkma.py  test_hkma_integration.py  test_model.py  主账号空间-apiKey-5921428.csv  持仓模板20260702.xlsx  持仓模板20260703.xlsx
.qoder/agents/: ta-aggressive-risk.md  ta-bear-researcher.md  ta-bull-researcher.md  ta-conservative-risk.md  ta-fundamentals-analyst.md  ta-market-analyst.md  ta-neutral-risk.md  ta-news-analyst.md  ta-portfolio-manager.md  ta-research-manager.md  ta-sentiment-analyst.md  ta-trader.md
.qoder/skills/: trading-analysis.md
cli/: main.py
docs/: qwen_optimization.md
local_data/: backtest.db  backtest.db-shm  backtest.db-wal
local_data/cache/: 000001.SS-YFin-data-2021-06-24-2026-06-25.csv  000703.SZ-TuShare-daily-2026-07-03.csv  00136.HK-AKShare-HK-daily-2026-06-25.csv  002050.SZ-TuShare-daily-2026-07-03.csv  002149.SZ-Sina-daily-2026-06-25.csv  002149.SZ-YFin-data-2021-06-25-2026-06-26.csv  002432.SZ-TuShare-daily-2026-06-30.csv  002460.SZ-Sina-daily-2026-06-25.csv  002460.SZ-YFin-data-2021-06-25-2026-06-26.csv  002602.SZ-AKShare-daily-2026-06-26.csv  (+94 more)
scripts/: collect_data_for_skill.py  daily_backtest.bat  generate_skill_report.py
test_output/: 000703.SZ_2026-07-02_latest.json  000703.SZ_2026-07-03_20260703T125736.json  000703.SZ_final_state.json  000703_SZ_report.html  00136.HK_2026-06-24_20260625T032831.json  00136.HK_final_state.json  00136_HK_report.html  002050.SZ_2026-07-02_20260703T043437.json  002050.SZ_2026-07-03_20260703T082356.json  002050.SZ_2026-07-03_20260703T103515.json  002050.SZ_final_state.json  002050_SZ_report.html  002149.SZ_2026-06-25_20260625T055830.json  002149_SZ_final_state.json  002149_SZ_report.html  002432.SZ_2026-06-30_20260630T134304.json  002432.SZ_2026-06-30_20260630T150024.json  002432.SZ_2026-06-30_20260630T155007.json  002432.SZ_final_state.json  002432_SZ_report.html  002460.SZ_2026-06-25_latest.json  002460.SZ_final_state.json  002460_SZ_report.html  002602.SZ_2026-06-23_latest.json  002602.SZ_2026-06-24_latest.json  002602.SZ_2026-06-25_20260625T111306.json  002602.SZ_2026-06-25_latest.json  002602.SZ_2026-06-26_20260626T051134.json  002602.SZ_2026-06-26_latest.json  002602.SZ_2026-06-29_20260629T022925.json  002602.SZ_2026-06-29_20260629T140150.json  002602.SZ_2026-06-29_20260629T172648.json  002602.SZ_2026-06-29_latest.json  002602.SZ_2026-06-30_20260630T155008.json  002602.SZ_2026-07-01_latest.json  002602.SZ_2026-07-02_20260702T104812.json  002602.SZ_2026-07-02_20260702T111801.json  002602.SZ_2026-07-02_20260702T130715.json  002602.SZ_2026-07-02_20260702T143246.json  002602.SZ_2026-07-03_latest.json  (+172 more)
tests/: test_analyst_execution.py  test_market_toolnode.py  test_market_utils.py  test_structured_agents.py
tradingagents/: default_config.py
web/: backtest_routes.py  portfolio_report.py  server.py
(+70 files in other folders)
